#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT(proDemo, 1.0, sunhyx@gmail.com)
AC_CONFIG_SRCDIR([src/main.c])
#AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(proDemo, 1.0)

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB       #使用了静态库编译,需要此宏定义

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT( 		Makefile 
			src/Makefile
			src/ModuleA/Makefile
			)
